manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infopiste-backend-deployment
  namespace: ohtuprojekti-staging
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"infopiste-backend:staging","namespace":"ohtuprojekti-staging"},"fieldPath":"spec.template.spec.containers[?(@.name==\"backend\")].image","pause":"false"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infopiste-backend
  template:
    metadata:
      labels:
        app: infopiste-backend
    spec:
      containers:
        - name: infopiste-backend
          image: infopiste-backend:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 1234
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "100m"

---

apiVersion: v1
kind: Service
metadata:
  name: infopiste-backend-service
spec:
  selector:
    app: infopiste-backend
  ports:
      protocol: TCP
      port: 1234
      targetPort: 1234
  type: ClusterIP
