manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infopiste-backend
spec:
  selector:
    app: infopiste-backend
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
  type: ClusterIP
