manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infopiste-frontend
  namespace: ohtuprojekti-staging
spec:
  selector:
    app: infopiste-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
