manifests/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infopiste-mongo-svc
spec:
  selector:
    app: infopiste-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
