manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infopiste-redis-svc
spec:
  selector:
    app: infopiste-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
