manifests/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: infopiste-backend-route
  namespace: ohtuprojekti-staging
  labels:
    app: infopiste-backend
    type: external
spec:
  host: infopiste-backend-ohtuprojekti-staging.ext.ocp-test-0.k8s.it.helsinki.fi  
  port:
    targetPort: 1234
  to:
    kind: Service
    name: infopiste-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
